[package]
name = "rsxn"
version = "0.1.0"
edition = "2021"
authors = ["reo <ramazanemreosmanoglu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.0"
egui = "0.27.0"
env_logger = "0.11.3"
epi = "0.17.0"
log = "0.4.21"
opener = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
strip-ansi-escapes = "0.2.0"
